change yaml to yml

--- a/ansible/raspberry-pis/inventories/homelab/host.yml
+++ b/ansible/raspberry-pis/inventories/homelab/host.yml
@@ -1,6 +1,15 @@
 homelab:
   children:
+    raspberry_pis:
+
+raspberry_pis:
+  children:
     thicket_pis:
+    one_off_pis:
+
+one_off_pies:
+  hosts:
+    mansionsyrup:
 
 thicket_pis:
   hosts:
