configure pwm fan control

--- a/ansible/homelab/inventories/homelab/host.yml
+++ b/ansible/homelab/inventories/homelab/host.yml
@@ -1,3 +1,5 @@
+# relationships
+
 homelab:
   children:
     raspberry_pis:
@@ -7,6 +9,14 @@ raspberry_pis:
     thicket_pis:
     one_off_pis:
 
+k8s:
+  children:
+    k8s_managers:
+    k8s_workers:
+
+
+# groups and hosts
+
 one_off_pies:
   hosts:
     mansionsyrup:
@@ -15,10 +25,9 @@ thicket_pis:
   hosts:
     thicket[0:3]:
 
-k8s:
-  children:
-    k8s_managers:
-    k8s_workers:
+thicket_fan_controllers:
+  hosts:
+    thicket0:
 
 k8s_managers:
   hosts:
