--- a/ansible/homelab/pb.ping.yml
+++ b/ansible/homelab/pb.ping.yml
@@ -1,5 +1,7 @@
 - name: ping the thicket
   gather_facts: no
-  hosts: thicketpis
+  hosts: all
   tasks:
     - action: ansible.builtin.ping
+  vars_files:
+    - vault/main.yml
