--- a/portainer/docker/stacks/actualbudget.yml
+++ b/portainer/docker/stacks/actualbudget.yml
@@ -18,8 +18,10 @@ services:
         condition: "any"
       placement:
         constraints:
-          - "node.platform.arch == armv7l"
-    image: "docker.io/actualbudget/actual-server:24.2.0"
+          #- "node.hostname == bolt" 
+          - "node.platform.arch == aarch64"
+          #- "node.platform.arch == armv7l"
+    image: "docker.io/actualbudget/actual-server:24.8.0"
     ports:
       # This line makes Actual available at port 5006 of the device you run the server on,
       # i.e. http://localhost:5006. You can change the first number to change the port, if you want.
