--- a/portainer/docker/stacks/actualbudget.yml
+++ b/portainer/docker/stacks/actualbudget.yml
@@ -3,15 +3,15 @@
 version: '3'
 
 services:
-  actual_server:
+  actualbudget_server:
     deploy:
       labels:
         traefik.enable: "true"
-        traefik.http.routers.actual.entrypoints: "web, websecure"
-        traefik.http.routers.actual.rule: "Host(`actual.tlake.io`)"
-        traefik.http.routers.actual.tls: "true"
-        traefik.http.routers.actual.tls.certresolver: "production"
-        traefik.http.services.actual.loadbalancer.server.port: 5006
+        traefik.http.routers.actualbudget.entrypoints: "web, websecure"
+        traefik.http.routers.actualbudget.rule: "Host(`actual.tlake.io`)"
+        traefik.http.routers.actualbudget.tls: "true"
+        traefik.http.routers.actualbudget.tls.certresolver: "production"
+        traefik.http.services.actualbudget.loadbalancer.server.port: 5006
       mode: "replicated"
       replicas: 1
       restart_policy:
