update armv7l to aarch64

--- a/portainer/docker/stacks/docker-registry.yml
+++ b/portainer/docker/stacks/docker-registry.yml
@@ -18,7 +18,7 @@ services:
         condition: "any"
       placement:
         constraints:
-          - "node.platform.arch == armv7l"
+          - "node.platform.arch == aarch64"
     image: "docker.io/registry:2.8.3"
     networks:
       - "home"
