--- a/portainer/docker/stacks/gitea.yml
+++ b/portainer/docker/stacks/gitea.yml
@@ -23,11 +23,11 @@ services:
     environment:
       - "USER_UID=1000"
       - "USER_GID=1000"
-      - "GITEA__database__DB_TYPE=postgres"
-      - "GITEA__database__HOST=db:5432"
-      - "GITEA__database__NAME=$POSTGRES_DB"
-      - "GITEA__database__USER=$POSTGRES_USER"
-      - "GITEA__database__PASSWD=$POSTGRES_PASSWORD"
+      - "GITEA__database__DB_TYPE=$DB_TYPE"
+      - "GITEA__database__HOST=db:$DB_PORT"
+      - "GITEA__database__NAME=$DB_NAME"
+      - "GITEA__database__USER=$DB_USER"
+      - "GITEA__database__PASSWD=$DB_PASSWORD"
     image: "gitea/gitea:1.19.4"
     networks:
       - "gitea"
@@ -50,9 +50,9 @@ services:
         constraints:
           - "node.hostname == bolt"
     environment:
-      - "POSTGRES_USER=$POSTGRES_USER"
-      - "POSTGRES_PASSWORD=$POSTGRES_PASSWORD"
-      - "POSTGRES_DB=$POSTGRES_DB"
+      - "POSTGRES_USER=$DB_USER"
+      - "POSTGRES_PASSWORD=$DB_PASSWORD"
+      - "POSTGRES_DB=$DB_NAME"
 
     image: "postgres:14"
     networks:
