--- a/portainer/docker/stacks/foundryvtt.yml
+++ b/portainer/docker/stacks/foundryvtt.yml
@@ -37,7 +37,9 @@ services:
       FOUNDRY_HOSTNAME: $FOUNDRY_HOSTNAME
       FOUNDRY_LICENSE_KEY: $FOUNDRY_LICENSE_KEY
       FOUNDRY_MINIFY_STATIC_FILES: "true"
+      #FOUNDRY_PASSWORD: $FOUNDRY_PASSWORD
       FOUNDRY_TELEMETRY: "false"
+      #FOUNDRY_USERNAME: $FOUNDRY_USERNAME
       FOUNDRY_WORLD: "import_campaign"
       TIMEZONE: "America/Los_Angeles"
     # set container's hostname to avoid agreeing to the eula every startup
