--- a/portainer/docker/stacks/foundryvtt-andrew.yml
+++ b/portainer/docker/stacks/foundryvtt-andrew.yml
@@ -31,6 +31,7 @@ services:
     environment:
       CONTAINER_CACHE: "/container_cache"
       CONTAINER_CACHE_SIZE: 10
+      #CONTAINER_PRESERVE_CONFIG: "true"
       FOUNDRY_ADMIN_KEY: $FOUNDRY_ADMIN_KEY
       FOUNDRY_COMPRESS_WEBSOCKET: "true"
       FOUNDRY_CSS_THEME: "fantasy"
@@ -38,6 +39,7 @@ services:
       FOUNDRY_LICENSE_KEY: $FOUNDRY_LICENSE_KEY
       FOUNDRY_MINIFY_STATIC_FILES: "true"
       FOUNDRY_TELEMETRY: "false"
+      #FOUNDRY_WORLD: ""
       TIMEZONE: "America/New_York"
     # set container's hostname to avoid agreeing to the eula every startup
     hostname: "ando_mcfoundry_host"
