--- a/argocd/applications/traefik/cluster-role-binding.yaml
+++ b/argocd/applications/traefik/cluster-role-binding.yaml
@@ -2,6 +2,7 @@ kind: ClusterRoleBinding
 apiVersion: rbac.authorization.k8s.io/v1
 metadata:
   name: traefik-ingress-controller
+
 roleRef:
   apiGroup: rbac.authorization.k8s.io
   kind: ClusterRole
@@ -9,3 +10,4 @@ roleRef:
 subjects:
 - kind: ServiceAccount
   name: traefik-ingress-controller
+  namespace: traefik
