--- a/argocd/applications/traefik/cluster-role-binding.yaml
+++ b/argocd/applications/traefik/cluster-role-binding.yaml
@@ -1,13 +1,13 @@
 kind: ClusterRoleBinding
 apiVersion: rbac.authorization.k8s.io/v1
 metadata:
-  name: traefik-ingress-controller
+  name: traefik-cluster-role-binding
 
 roleRef:
   apiGroup: rbac.authorization.k8s.io
   kind: ClusterRole
-  name: traefik-ingress-controller
+  name: traefik-cluster-role
 subjects:
 - kind: ServiceAccount
-  name: traefik-ingress-controller
+  name: traefik-service-account
   namespace: traefik
