--- a/argocd/applications/traefik/cluster-role.yaml
+++ b/argocd/applications/traefik/cluster-role.yaml
@@ -1,7 +1,7 @@
 kind: ClusterRole
 apiVersion: rbac.authorization.k8s.io/v1
 metadata:
-  name: traefik-ingress-controller
+  name: traefik-cluster-role
 
 rules:
   # these rules taken from traefik docs
