--- a/argocd/applications/traefik/deployment.yaml
+++ b/argocd/applications/traefik/deployment.yaml
@@ -15,7 +15,7 @@ spec:
       labels:
         app: traefik
     spec:
-      serviceAccountName: traefik-account
+      serviceAccountName: traefik-service-account
       containers:
         - name: traefik
           image: traefik:v3.1
