fix storageclass name

--- a/argocd/applications/traefik/persistent-volumes.yaml
+++ b/argocd/applications/traefik/persistent-volumes.yaml
@@ -3,7 +3,7 @@ apiVersion: v1
 metadata:
   name: traefik-static-config
 spec:
-  storageClassName: nfs-01
+  storageClassName: nfs-client
   accessModes:
     - ReadWriteMany
   resources:
