--- a/argocd/applications/traefik/persistent-volumes.yaml
+++ b/argocd/applications/traefik/persistent-volumes.yaml
@@ -1,7 +1,7 @@
 kind: PersistentVolumeClaim
 apiVersion: v1
 metadata:
-  name: traefik-static-config
+  name: traefik-static-config-claim
 spec:
   storageClassName: nfs-client
   accessModes:
