--- a/argocd/applications/traefik/deployment.yaml
+++ b/argocd/applications/traefik/deployment.yaml
@@ -28,9 +28,19 @@ spec:
             - name: dashboard
               containerPort: 8080
           volumeMounts:
+            - name: traefik-app-certs
+              mountPath: "/etc/certs"
+            - name: traefik-dynamic-config
+              mountPath: "/etc/dynamic-config"
             - name: traefik-static-config
               mountPath: "/etc/traefik"
       volumes:
+        - name: traefik-app-certs
+          persistentVolumeClaim:
+            claimName: traefik-app-certs-claim
+        - name: traefik-dynamic-config
+          persistentVolumeClaim:
+            claimName: traefik-dynamic-config-claim
         - name: traefik-static-config
           persistentVolumeClaim:
             claimName: traefik-static-config-claim
