--- a/argocd/applications/traefik/service.yaml
+++ b/argocd/applications/traefik/service.yaml
@@ -21,10 +21,12 @@ metadata:
 spec:
   type: LoadBalancer
   ports:
-    - targetPort: web
+    - name: web
       port: 80
-    - targetPort: websecure
+      targetPort: web
+    - name: websecure
       port: 443
+      targetPort: websecure
   selector:
     app: traefik
 
