--- a/argocd/applications/whoami/ingress.yaml
+++ b/argocd/applications/whoami/ingress.yaml
@@ -1,7 +1,10 @@
 apiVersion: networking.k8s.io/v1
 kind: Ingress
 metadata:
+  annotations:
+    kubernetes.io/ingress.class: traefik
   name: whoami-ingress
+  namespace: whoami
 spec:
   rules:
   - http:
