--- a/argocd/applications/whoami/service.yaml
+++ b/argocd/applications/whoami/service.yaml
@@ -2,8 +2,11 @@ apiVersion: v1
 kind: Service
 metadata:
   name: whoami
+  namespace: whoami
 
 spec:
+  type: ExternalName
+  externalName: whoami.whoami.svc.cluster.local
   ports:
     - name: web
       port: 80
