--- a/argocd/applications/whoami/routing.yaml
+++ b/argocd/applications/whoami/routing.yaml
@@ -1,3 +1,19 @@
+apiVersion: v1
+kind: Service
+metadata:
+  name: whoami
+
+spec:
+  ports:
+    - name: web
+      port: 80
+      targetPort: web
+
+  selector:
+    app: whoami
+
+---
+
 apiVersion: networking.k8s.io/v1
 kind: Ingress
 metadata:
@@ -16,3 +32,4 @@ spec:
               name: whoami
               port:
                 name: web
+
