--- a/argocd/applications/actualbudget/deployment.yaml
+++ b/argocd/applications/actualbudget/deployment.yaml
@@ -18,9 +18,9 @@ spec:
       containers:
         - name: actualbudget
           env:
-            - ACTUAL_UPLOAD_FILE_SYNC_SIZE_LIMIT_MB=200
-            - ACTUAL_UPLOAD_SYNC_ENCRYPTED_FILE_SYNC_SIZE_LIMIT_MB=500
-            - ACTUAL_UPLOAD_FILE_SIZE_LIMIT_MB=20
+            - ACTUAL_UPLOAD_FILE_SYNC_SIZE_LIMIT_MB: 200
+            - ACTUAL_UPLOAD_SYNC_ENCRYPTED_FILE_SYNC_SIZE_LIMIT_MB: 500
+            - ACTUAL_UPLOAD_FILE_SIZE_LIMIT_MB: 20
           image: "docker.io/actualbudget/actual-server:24.8.0"
           ports:
             - name: web
