--- a/argocd/applications/traefik/service.yaml
+++ b/argocd/applications/traefik/service.yaml
@@ -4,12 +4,13 @@ metadata:
   name: traefik-dashboard-service
 
 spec:
-  type: LoadBalancer
+  loadBalancerIP: 192.168.0.212
   ports:
     - port: 80
       targetPort: dashboard
   selector:
     app: traefik
+  type: LoadBalancer
 
 ---
 
@@ -19,7 +20,7 @@ metadata:
   name: traefik-web-service
 
 spec:
-  type: LoadBalancer
+  loadBalancerIP: 192.168.0.211
   ports:
     - name: web
       port: 80
@@ -29,4 +30,5 @@ spec:
       targetPort: websecure
   selector:
     app: traefik
+  type: LoadBalancer
 
