--- a/argocd/applications/traefik/kustomization.yaml
+++ b/argocd/applications/traefik/kustomization.yaml
@@ -4,6 +4,9 @@ kind: Kustomization
 resources:
 - cluster-role.yaml
 - cluster-role-binding.yaml
+- ingressroute-definitions.yaml
+- ingressroute-rbac.yaml
+- ingressroute-resources.yaml
 - service-account.yaml
 #- daemon-set.yaml
 - deployment.yaml
