--- a/argocd/applications/actualbudget/routing.yaml
+++ b/argocd/applications/actualbudget/routing.yaml
@@ -14,23 +14,24 @@ spec:
 
 ---
 
-apiVersion: networking.k8s.io/v1
-kind: Ingress
+apiVersion: traefik.io/v1alpha1
+kind: IngressRoute
 metadata:
   annotations:
-    traefik.ingress.kubernetes.io/routers.actualbudget.entrypoints: "web,websecure"
-    traefik.ingress.kubernetes.io/routers.actualbudget.tls.certresolver: staging
   name: actualbudget-ingress
-spec:
-  rules:
-    - host: actualbudget.tlake.io
-      http:
-        paths:
-        - path: /
-          pathType: Prefix
-          backend:
-            service:
-              name: actualbudget
-              port:
-                name: web
+  namespace: actualbudget
 
+spec:
+  entryPoints:
+    - web
+    - websecure
+
+  routes:
+    - match: Host(`actualbudget.tlake.io`)
+      kind: Rule
+      services:
+        - name: actualbudget
+          port: web
+
+  tls:
+    certResolver: staging
