--- a/argocd/applications/traefik/kustomization.yaml
+++ b/argocd/applications/traefik/kustomization.yaml
@@ -6,7 +6,7 @@ resources:
 - cluster-role-binding.yaml
 - ingressroute-definitions.yaml
 - ingressroute-rbac.yaml
-- ingressroute-resources.yaml
+#- ingressroute-resources.yaml
 - service-account.yaml
 #- daemon-set.yaml
 - deployment.yaml
