--- a/argocd/applications/template/deployment.yaml
+++ b/argocd/applications/template/deployment.yaml
@@ -1,26 +1,34 @@
 kind: Deployment
 apiVersion: apps/v1
 metadata:
-  name: CHANGE_APP_IDENTIFIER
+  name: "CHANGE_APP_IDENTIFIER"
   labels:
-    app: CHANGE_APP_IDENTIFIER
+    app: "CHANGE_APP_IDENTIFIER"
 
 spec:
   replicas: 1
   selector:
     matchLabels:
-      app: CHANGE_APP_IDENTIFIER
+      app: "CHANGE_APP_IDENTIFIER"
   template:
     metadata:
       labels:
-        app: CHANGE_APP_IDENTIFIER
+        app: "CHANGE_APP_IDENTIFIER"
     spec:
       containers:
-        - name: CHANGE_APP_IDENTIFIER
+        - name: "CHANGE_APP_IDENTIFIER"
           env:
-            - name: CHANGE_ENVVAR_NAME
+            - name: "CHANGE_ENVVAR_NAME"
               value: "CHANGE_ENVVAR_VALUE"
           image: "CHANGE_IMAGE_REF"
           ports:
-            - name: web
+            - name: "app"
               containerPort: CHANGE_PORT_NUMBER
+          volumeMounts:
+            - name: "CHANGE_VOLUME_NAME"
+              mountPath: "/CHANGE_MOUNT_PATH"
+      volumes:
+        - name: "CHANGE_VOLUME_NAME"
+          persistentVolumeClaim:
+            claimName: "CHANGE_VOLUME_NAME"
+
