--- a/argocd/applications/template/routing.yaml
+++ b/argocd/applications/template/routing.yaml
@@ -1,35 +1,57 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: CHANGE_APP_IDENTIFIER
+  name: "CHANGE_APP_IDENTIFIER"
 
 spec:
   ports:
-    - name: web
+    - name: "http-traffic"
       port: 80
-      targetPort: web
+      targetPort: "app"
 
   selector:
-    app: CHANGE_APP_IDENTIFIER
+    app: "CHANGE_APP_IDENTIFIER"
 
 ---
 
-apiVersion: networking.k8s.io/v1
-kind: Ingress
+apiVersion: traefik.io/v1alpha1
+kind: IngressRoute
 metadata:
   annotations:
-    traefik.ingress.kubernetes.io/router.entrypoints: web
-  name: CHANGE_APP_IDENTIFIER
+  name: "CHANGE_APP_IDENTIFIER-web"
+  namespace: "CHANGE_APP_IDENTIFIER"
+
 spec:
-  rules:
-    - host: CHANGE_HOST
-      http:
-        paths:
-        - path: /
-          pathType: Prefix
-          backend:
-            service:
-              name: CHANGE_APP_IDENTIFIER
-              port:
-                name: web
+  entryPoints:
+    - web
+
+  routes:
+    - match: Host(`CHANGE_HOST`)
+      kind: Rule
+      services:
+        - name: "CHANGE_APP_IDENTIFIER"
+          port: "http-traffic"
+
+---
+
+apiVersion: traefik.io/v1alpha1
+kind: IngressRoute
+metadata:
+  annotations:
+  name: "CHANGE_APP_IDENTIFIER-websecure"
+  namespace: "CHANGE_APP_IDENTIFIER"
+
+spec:
+  entryPoints:
+    - websecure
+
+  routes:
+    - match: Host(`CHANGE_HOST`)
+      kind: Rule
+      services:
+        - name: "CHANGE_APP_IDENTIFIER"
+          port: "http-traffic"
+
+  tls:
+    certResolver: "staging"
 
