--- a/argocd/applications/actualbudget/persistent-volumes.yaml
+++ b/argocd/applications/actualbudget/persistent-volumes.yaml
@@ -3,7 +3,7 @@ apiVersion: v1
 metadata:
   name: "data"
 spec:
-  storageClassName: "nfs-client"
+  storageClassName: "microk8s-hostpath"
   accessModes:
     - ReadWriteMany
   resources:
