--- a/argocd/applications/actualbudget/deployment.yaml
+++ b/argocd/applications/actualbudget/deployment.yaml
@@ -35,6 +35,6 @@ spec:
         - name: "data"
           persistentVolumeClaim:
             #claimName: "data"
-            claimName: "data-k8s"
-            #claimName: "data-nfs"
+            #claimName: "data-k8s"
+            claimName: "data-nfs"
 
