use hostpath pvc storageclass

--- a/argocd/applications/actualbudget/deployment.yaml
+++ b/argocd/applications/actualbudget/deployment.yaml
@@ -34,7 +34,5 @@ spec:
       volumes:
         - name: "data"
           persistentVolumeClaim:
-            #claimName: "data"
-            #claimName: "data-k8s"
-            claimName: "data-nfs"
+            claimName: "data"
 
