--- a/argocd/applications/vaultwarden/persistent-volumes.yaml
+++ b/argocd/applications/vaultwarden/persistent-volumes.yaml
@@ -10,3 +10,17 @@ spec:
     requests:
       storage: "10Mi"
 
+---
+
+kind: PersistentVolumeClaim
+apiVersion: v1
+metadata:
+  name: "mariadb-data"
+spec:
+  storageClassName: "nfs-client"
+  accessModes:
+    - ReadWriteMany
+  resources:
+    requests:
+      storage: "10Mi"
+
