--- a/argocd/applications/vaultwarden/deployment.yaml
+++ b/argocd/applications/vaultwarden/deployment.yaml
@@ -89,6 +89,9 @@ spec:
                   name: "config"
                   key: "mysql_user"
           image: "mariadb:latest"
+          ports:
+            - name: "db"
+              containerPort: 3306
           volumeMounts:
             - name: "mariadb-data"
               mountPath: "/var/lib/mysql"
