--- a/argocd/applications/vaultwarden/routing.yaml
+++ b/argocd/applications/vaultwarden/routing.yaml
@@ -14,6 +14,21 @@ spec:
 
 ---
 
+apiVersion: v1
+kind: Service
+metadata:
+  name: "mariadb"
+spec:
+  selector:
+    app: "mariadb"
+  ports:
+    - name: "db"
+      port: 3306
+      protocol: TCP
+      targetPort: "db"
+
+---
+
 apiVersion: traefik.io/v1alpha1
 kind: IngressRoute
 metadata:
